--- a/dining_room/templates/dining_room/survey.html
+++ b/dining_room/templates/dining_room/survey.html
@@ -76,7 +76,7 @@
     {% endfor %}
     {% endwith %}
 
-    <div class="row mt-5">
+    <div class="row my-5">
         <div class="col-6 offset-3">
         <input type="submit" value="Submit" class="btn btn-lg btn-block btn-outline-primary">
         </div>
