Wording changes. Gripper->hand, error->problem

--- a/dining_room/templates/dining_room/demographics.html
+++ b/dining_room/templates/dining_room/demographics.html
@@ -4,14 +4,14 @@
 <div class="container">
 
 <div class="row">
-    <div class="col mt-4">
-    <h3>Assisting a robot in a household task</h3>
+    <div class="col">
+    <h3 class="my-4">Assisting a robot in a household task</h3>
 
     <p>In this study, a robot has the job of retrieving a cup of coffee and bringing it to the couch. You will</p>
 
     <ul>
         <li>observe a camera feed from the robot's "eyes"</li>
-        <li>provide information on any errors that occur</li>
+        <li>provide information on any problems that occur</li>
         <li>instruct the robot on what actions to take</li>
     </ul>
 
