--- a/dining_room/templates/dining_room/survey.html
+++ b/dining_room/templates/dining_room/survey.html
@@ -7,6 +7,12 @@
 {% block content %}
 <div class="container">
 
+<div class="row mt-4">
+<h5 class="col">Please indicate the degree to which you agree or disagree with the statements below:</h5>
+</div>
+
+<hr/>
+
 {% spaceless %}
 <div class="row justify-content-center">
     <form method="post" action="{% url 'dining_room:survey' %}" class="col">
@@ -15,13 +21,13 @@
     {{ hidden }}
     {% endfor %}
 
-    {% with radio_fields="long_time_to_recover easy_to_diagnose long_time_to_understand system_helped_resume easy_to_recover system_helped_understand" horizontal_radio_fields="long_time_to_recover easy_to_diagnose long_time_to_understand system_helped_resume easy_to_recover system_helped_understand" %}
+    {% with comment_fields="comments" %}
     {% for field in form.visible_fields %}
 
-    {% if field.name in radio_fields.split and field.name in horizontal_radio_fields.split %}
+    {% if field.name not in comment_fields.split %}
         <fieldset class="form-group">
         <div class="row">
-            <legend class="col col-form-label"><h5>{{ field.label }}</h5></legend>
+            <legend class="col col-form-label"><p>{{ field.label }}</p></legend>
         </div>
         {% if field.errors %}
         <div class="row">
@@ -32,7 +38,7 @@
         <div class="col btn-group" data-toggle="buttons">
             {% for value, name in field.field.choices %}
             {% if value != '' %}
-            <button class="col btn btn-outline-dark form-check-label {% if value|safe == field.value|safe %}active{% endif %}">
+            <button class="col btn btn-outline-info form-check-label {% if value|safe == field.value|safe %}active{% endif %}">
             <input class="form-check-input" type="radio" name="{{ field.name }}" value="{{ value }}" style="display: none;" {% if value|safe == field.value|safe %}checked{% endif %}> {{ name }}
             </button>
             {% endif %}
@@ -40,28 +46,8 @@
         </div>
         </div>
         </fieldset>
-    {% elif field.name in radio_fields.split %}
-        <fieldset class="form-group">
-        {% if field.errors %}
-        <div class="row">
-        <div class="col alert alert-danger">{% for error in field.errors %}<p class="my-1">{{ error }}</p>{% endfor %}</div>
-        </div>
-        {% endif %}
-        <div class="row">
-            <legend class="col-form-label col-3 py-0"><h5>{{ field.label }}</h5></legend>
-            <div class="col">
-                {% for value, name in field.field.choices %}
-                {% if value != '' %}
-                <div class="form-check">
-                  <input class="form-check-input" type="radio" name="{{ field.name }}" value="{{ value }}" {% if value|safe == field.value|safe %}checked{% endif %}>
-                  <label class="form-check-label" for="{{ value }}">{{ name }}</label>
-                </div>
-                {% endif %}
-                {% endfor %}
-            </div>
-        </div>
-        </fieldset>
     {% else %}
+        <hr/>
         <div class="form-group">
             {% if field.errors %}
             <div class="row">
