--- a/dining_room/templates/dining_room/test.html
+++ b/dining_room/templates/dining_room/test.html
@@ -10,7 +10,7 @@
 <div class="row">
     <div class="col mt-4">
     <h3>Knowledge Review</h3>
-    <p>Please answer the following questions to the best of your ability before proceeding; <b>your compensation depends on the correctness of your answers</b>. You may return to the instructions to refresh anything you might've forgotten.</p>
+    <p>Please answer the following questions to the best of your ability before proceeding; <b>you must answer all questions correctly in order to proceed</b>. You may return to the instructions to refresh anything you might've forgotten.</p>
     </div>
 </div>
 
