Check for people people that fail the review too many times

--- a/dining_room/templates/dining_room/demographics.html
+++ b/dining_room/templates/dining_room/demographics.html
@@ -17,7 +17,7 @@
 
     <p>Your data is anonymized and no personally identifiable information will be collected. We set a cookie to track your progress through the study, but the cookie is invalidated when the study session is complete. The cookie cannot be reused on third-party websites.</p>
 
-    <p>You must complete the full study and obtain an authorization code at the end to receive full payment.</p>
+    <p>You must follow instructions and complete the full study to obtain an authorization code at the end to receive full payment.</p>
 
     <p>This study must be completed on a computer (not mobile phone or tablet) using either the latest Google Chrome or the latest Mozilla Firefox web browsers.</p>
 
