--- a/dining_room/templates/dining_room/study.html
+++ b/dining_room/templates/dining_room/study.html
@@ -42,7 +42,9 @@
             show_ax_suggestions: {{ request.user.show_ax_suggestions|yesno:"true,false" }}
         },
         ACTIONS: {{ actions_constant|safe }},
-        DIAGNOSES: {{ diagnoses_constant|safe }}
+        ACTIONS_ORDER: {{ actions_order_constant|safe }},
+        DIAGNOSES: {{ diagnoses_constant|safe }},
+        DIAGNOSES_ORDER: {{ diagnoses_order_constant|safe }}
     };
 </script>
 
