--- a/dining_room/templates/dining_room/demographics.html
+++ b/dining_room/templates/dining_room/demographics.html
@@ -17,7 +17,7 @@
 
     <p>Your data is anonymized and no personally identifiable information will be collected. We set a cookie to track your progress through the study, but the cookie is invalidated when the study session is complete. The cookie cannot be reused on third-party websites.</p>
 
-    <p>You must follow instructions and complete the full study to obtain an authorization code at the end to receive full payment.</p>
+    <p>You must follow instructions and complete the full study to obtain an authorization code at the end to receive full payment. The study is designed to take <u>upto 20 minutes</u>, but we allow you to take upto 45 minutes to complete the study. We cannot compensate you if you submit your authorization code beyond the 45 minute time window.</p>
 
     <p>This study must be completed on a computer (not mobile phone or tablet) using either the latest Google Chrome or the latest Mozilla Firefox web browsers.</p>
 
