--- a/dining_room/templates/dining_room/instructions.html
+++ b/dining_room/templates/dining_room/instructions.html
@@ -90,20 +90,32 @@
     <p class="col">The following is a brief explanation of the types of actions the robot can execute:</p>
 </div>
 <dl class="row">
-    <dt class="col-sm-3 alert alert-info">Update robot's location belief to <span class="font-weight-normal">[location]</span></dt>
+    <dt class="col-sm-3 alert alert-info">Update robot's location belief to: <span class="font-weight-normal">[location]</span></dt>
     <dd class="col-sm-9">The robot updates where in the room it thinks it is. For example, if the robot thinks it is at the Kitchen Counter when in reality it is at the Couch, this action can update that mistaken knowledge (called a <i>belief</i>).</dd>
 
     <dt class="col-sm-3 alert alert-info">Navigate to <span class="font-weight-normal">[location]</span></dt>
     <dd class="col-sm-9">The robot moves to the desired location (among the three available) in the room.</dd>
 
+    <dt class="col-sm-3 alert alert-info">Remove the obstacle blocking navigation</dt>
+    <dd class="col-sm-9">The robot moves an obstacle blocking its path to a location. The action succeeds only if it is able to detect such an obstacle.</dd>
+
+    <dt class="col-sm-3 alert alert-info">Move away from a collision</dt>
+    <dd class="col-sm-9">The robot tries to get out of a collision during navigation. The action succeeds only if the robot can sense such a collision.</dd>
+
     <dt class="col-sm-3 alert alert-info">Look at <span class="font-weight-normal">[location]</span></dt>
-    <dd class="col-sm-9">The robot moves away from its current location to point its camera at the desired location. After viewing that location for a few seconds, the robot returns to looking at its original location.</dd>
+    <dd class="col-sm-9">The robot moves away from its current location to point its camera at the desired location. After viewing that location for a few seconds, the robot returns to look at its original location.</dd>
 
     <dt class="col-sm-3 alert alert-info">Pick up <span class="font-weight-normal">[object]</span></dt>
-    <dd class="col-sm-9">The robot picks up the object in question if it is unblocked and its hand is empty.</dd>
+    <dd class="col-sm-9">The robot picks up the object in question. The action succeeds only if the object is unblocked and the robot's hand is empty.</dd>
 
     <dt class="col-sm-3 alert alert-info">Put away held object</dt>
     <dd class="col-sm-9">The robot puts away the object in its hand. This might involve arm motion that is not visible in the robot's camera.</dd>
+
+    <dt class="col-sm-3 alert alert-info">Restart the camera</dt>
+    <dd class="col-sm-9">The robot's camera software is restarted.</dd>
+
+    <dt class="col-sm-3 alert alert-info">Find the charger and navigate to it</dt>
+    <dd class="col-sm-9">The robot moves away from its current location to find the charger and then move towards it. The action succeeds only if the robot is low on battery.</dd>
 </dl>
 
 <div class="row">
